--- a/netlify.toml
+++ b/netlify.toml
@@ -14,8 +14,8 @@
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
   #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+  command = "npm start" # Command to start your dev server
+  port = 3000 # Port that the dev server will be listening on
+  publish = "frontend/public" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
