--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 # dependencies
 
-<<<<<<< HEAD
-/node_modules
-/build
-
-=======
 frontend/node_modules/
-node_modules/
->>>>>>> third
+node_modules
